Diretiva v-bind em atributos HTML

--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
 <body>
 
     <div id="app">
-        <div class="title">{{title}}</div>
-        <div v-html="titleHTML"></div>
+       <div v-bind:class="dynamicClass" v-bind:id="dynamicId">Dinamically assign a class and an id to the div</div>
     </div>
 
     <script src="./main.js"></script>
