--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 
     <div id="app">
-       <div v-bind:class="dynamicClass" v-bind:id="dynamicId">Dinamically assign a class and an id to the div</div>
+     <button v-bind:disabled="disabled">You can't click this button</button>
     </div>
 
     <script src="./main.js"></script>
