Argumentos Dinâmicos em Vue

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 
     <div id="app">
-     <button v-bind:disabled="disabled">You can't click this button</button>
+     <a v-bind:[attribute_name]="url">Visit my Website</a>
     </div>
 
     <script src="./main.js"></script>
