Evento dinâmico em Vue

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 
     <div id="app">
-     <a v-bind:[attribute_name]="url">Visit my Website</a>
+     <a v-on:[event_name]="runFunction">Some link</a>
     </div>
 
     <script src="./main.js"></script>
